# actor

./: Cargo.toml
src/: actor.rs  client.rs  error.rs  main.rs  traits.rs
src/actors/: client.rs  mod.rs  state.rs  traits.rs
src/aggregates/client/: aggregate.rs  commands.rs  error.rs  events.rs  mod.rs
