[package]
name = "actor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bastion = { version = "*", features =["tokio-runtime", "scaling"] }
tokio = { version = "*", features = ["full"] }
tokio-util = { version = "*", features = ["full"] }
log = "*"
env_logger = "*"
async-trait = "*"
anyhow = "*"
thiserror = "*"